Opening/Closing left pane with flagged evolution picker.
This has yet to be moved to the bottom. But this is now working and serves as an example.

--- a/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
@@ -35,13 +35,13 @@
             </Style.Triggers>
         </Style>
 
-        <Storyboard x:Key="ToggleLeftPane">
+        <Storyboard x:Key="OpenLeftPane">
             <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                             From="1171" To="0" Duration="0:0:0.3" />
+                             To="0" Duration="0:0:0.3" />
         </Storyboard>
-        <Storyboard x:Key="ToggleLeftPaneClosing">
+        <Storyboard x:Key="CloseLeftPane">
             <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.X)"
-                             From="0" To="1171" Duration="0:0:0.3" />
+                             To="1171" Duration="0:0:0.3" />
         </Storyboard>
     </Window.Resources>
 
@@ -225,8 +225,11 @@
                     <Style.Triggers>
                         <DataTrigger Binding="{Binding LeftPaneIsOpen}" Value="True">
                             <DataTrigger.EnterActions>
-                                <BeginStoryboard Storyboard="{StaticResource ToggleLeftPane}" />
+                                <BeginStoryboard Storyboard="{StaticResource OpenLeftPane}" />
                             </DataTrigger.EnterActions>
+                            <DataTrigger.ExitActions>
+                                <BeginStoryboard Storyboard="{StaticResource CloseLeftPane}" />
+                            </DataTrigger.ExitActions>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
