Removed the button style from app.xaml because I created a new one in a Dictionary. The evolutiontool user control was overwriting almost all of it so I moved all the styling into the style in the tool itself.

--- a/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/EvolutionTool/EvolutionToolUserControl.xaml
@@ -209,7 +209,8 @@
                     Content="{Binding CalculateButtonText}"
                     Command="{Binding SetEvolutionResult}">
                 <Button.Style>
-                    <Style TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="Button">
