--- a/DigimonWorldNet6/Frontend.WPF/UserControls/FlaggedEvolutionPicker/FlaggedEvolutionPickerUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/UserControls/FlaggedEvolutionPicker/FlaggedEvolutionPickerUserControl.xaml
@@ -3,16 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:flaggedEvolutionPicker="clr-namespace:DigimonWorld.Frontend.WPF.UserControls.FlaggedEvolutionPicker"
              xmlns:system="clr-namespace:System;assembly=System.Runtime"
+             xmlns:constants="clr-namespace:DigimonWorld.Frontend.WPF.Constants"
+             xmlns:mainWindow="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MainWindow"
+             xmlns:conversion="clr-namespace:DigimonWorld.Frontend.WPF.Conversion"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=flaggedEvolutionPicker:FlaggedEvolutionPickerViewModel, IsDesignTimeCreatable=True}">
+             d:DataContext="{d:DesignInstance mainWindow:MainWindowViewModel}"
+             DataContext="{Binding DataContext, RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
 
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Styles/Buttons/StretchContentButtonStyle/StretchContentButtonStyleDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <conversion:DigimonTypeContainsMultiConverter x:Key="DigimonTypeMultiConverter" />
 
             <system:Double x:Key="Width">50</system:Double>
             <system:Double x:Key="Height">50</system:Double>
@@ -49,7 +54,7 @@
 
         <TextBlock Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Margin="10">FRESH</TextBlock>
 
-        <ItemsControl Grid.Row="1" Grid.Column="0" ItemsSource="{Binding FreshStageIcons}">
+        <ItemsControl Grid.Row="1" Grid.Column="0" ItemsSource="{x:Static constants:EvolutionIcons.FreshStageIcons}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" />
@@ -60,8 +65,27 @@
                     <Button Style="{StaticResource StretchContentButtonStyle}"
                             Width="{StaticResource Width}"
                             Height="{StaticResource Height}"
-                            Margin="{StaticResource Margin}">
-                        <Image Source="{Binding}" Stretch="Fill" />
+                            Margin="{StaticResource Margin}"
+                            Command="{Binding DataContext.HistoricEvolutionClickedCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                            CommandParameter="{Binding}">
+                        <Image Source="{Binding IconPath}" Stretch="Fill">
+                            <Image.Style>
+                                <Style TargetType="Image">
+                                    <Setter Property="Opacity" Value="0.5" />
+                                    <Style.Triggers>
+                                        <DataTrigger Value="True">
+                                            <DataTrigger.Binding>
+                                                <MultiBinding Converter="{StaticResource DigimonTypeMultiConverter}">
+                                                    <Binding Path="DataContext.HistoricEvolutions" RelativeSource="{RelativeSource AncestorType=ItemsControl}" />
+                                                    <Binding Path="." />
+                                                </MultiBinding>
+                                            </DataTrigger.Binding>
+                                            <Setter Property="Opacity" Value="1.0" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
                     </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
@@ -73,10 +97,10 @@
             <Border BorderBrush="#491247" BorderThickness="0,0,3,3">
             </Border>
         </Border>
-        
+
         <TextBlock Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Margin="10">IN-TRAINING</TextBlock>
 
-        <ItemsControl Grid.Row="1" Grid.Column="1" ItemsSource="{Binding InTrainingStageIcons}">
+        <ItemsControl Grid.Row="1" Grid.Column="1" ItemsSource="{x:Static constants:EvolutionIcons.InTrainingStageIcons}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" />
@@ -87,8 +111,27 @@
                     <Button Style="{StaticResource StretchContentButtonStyle}"
                             Width="{StaticResource Width}"
                             Height="{StaticResource Height}"
-                            Margin="{StaticResource Margin}">
-                        <Image Source="{Binding}" Stretch="Fill" />
+                            Margin="{StaticResource Margin}"
+                            Command="{Binding DataContext.HistoricEvolutionClickedCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                            CommandParameter="{Binding}">
+                        <Image Source="{Binding IconPath}" Stretch="Fill">
+                            <Image.Style>
+                                <Style TargetType="Image">
+                                    <Setter Property="Opacity" Value="0.5" />
+                                    <Style.Triggers>
+                                        <DataTrigger Value="True">
+                                            <DataTrigger.Binding>
+                                                <MultiBinding Converter="{StaticResource DigimonTypeMultiConverter}">
+                                                    <Binding Path="DataContext.HistoricEvolutions" RelativeSource="{RelativeSource AncestorType=ItemsControl}" />
+                                                    <Binding Path="." />
+                                                </MultiBinding>
+                                            </DataTrigger.Binding>
+                                            <Setter Property="Opacity" Value="1.0" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
                     </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
@@ -100,10 +143,10 @@
             <Border BorderBrush="#09365B" BorderThickness="0,0,3,3">
             </Border>
         </Border>
-        
+
         <TextBlock Grid.Row="0" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Margin="10">ROOKIE</TextBlock>
 
-        <ItemsControl Grid.Row="1" Grid.Column="2" ItemsSource="{Binding RookieStageIcons}">
+        <ItemsControl Grid.Row="1" Grid.Column="2" ItemsSource="{x:Static constants:EvolutionIcons.RookieStageIcons}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" />
@@ -114,8 +157,27 @@
                     <Button Style="{StaticResource StretchContentButtonStyle}"
                             Width="{StaticResource Width}"
                             Height="{StaticResource Height}"
-                            Margin="{StaticResource Margin}">
-                        <Image Source="{Binding}" Stretch="Fill" />
+                            Margin="{StaticResource Margin}"
+                            Command="{Binding DataContext.HistoricEvolutionClickedCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                            CommandParameter="{Binding}">
+                        <Image Source="{Binding IconPath}" Stretch="Fill">
+                            <Image.Style>
+                                <Style TargetType="Image">
+                                    <Setter Property="Opacity" Value="0.5" />
+                                    <Style.Triggers>
+                                        <DataTrigger Value="True">
+                                            <DataTrigger.Binding>
+                                                <MultiBinding Converter="{StaticResource DigimonTypeMultiConverter}">
+                                                    <Binding Path="DataContext.HistoricEvolutions" RelativeSource="{RelativeSource AncestorType=ItemsControl}" />
+                                                    <Binding Path="." />
+                                                </MultiBinding>
+                                            </DataTrigger.Binding>
+                                            <Setter Property="Opacity" Value="1.0" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
                     </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
@@ -127,10 +189,10 @@
             <Border BorderBrush="#015B29" BorderThickness="0,0,3,3">
             </Border>
         </Border>
-        
+
         <TextBlock Grid.Row="0" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Margin="10">CHAMPION</TextBlock>
 
-        <ItemsControl Grid.Row="1" Grid.Column="3" ItemsSource="{Binding ChampionStageIcons}">
+        <ItemsControl Grid.Row="1" Grid.Column="3" ItemsSource="{x:Static constants:EvolutionIcons.ChampionStageIcons}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" />
@@ -141,8 +203,27 @@
                     <Button Style="{StaticResource StretchContentButtonStyle}"
                             Width="{StaticResource Width}"
                             Height="{StaticResource Height}"
-                            Margin="{StaticResource Margin}">
-                        <Image Source="{Binding}" Stretch="Fill" />
+                            Margin="{StaticResource Margin}"
+                            Command="{Binding DataContext.HistoricEvolutionClickedCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                            CommandParameter="{Binding}">
+                        <Image Source="{Binding IconPath}" Stretch="Fill">
+                            <Image.Style>
+                                <Style TargetType="Image">
+                                    <Setter Property="Opacity" Value="0.5" />
+                                    <Style.Triggers>
+                                        <DataTrigger Value="True">
+                                            <DataTrigger.Binding>
+                                                <MultiBinding Converter="{StaticResource DigimonTypeMultiConverter}">
+                                                    <Binding Path="DataContext.HistoricEvolutions" RelativeSource="{RelativeSource AncestorType=ItemsControl}" />
+                                                    <Binding Path="." />
+                                                </MultiBinding>
+                                            </DataTrigger.Binding>
+                                            <Setter Property="Opacity" Value="1.0" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
                     </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
@@ -154,10 +235,10 @@
             <Border BorderBrush="#714321" BorderThickness="0,0,3,3">
             </Border>
         </Border>
-        
+
         <TextBlock Grid.Row="0" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Black" Margin="10">ULTIMATE</TextBlock>
 
-        <ItemsControl Grid.Row="1" Grid.Column="4" ItemsSource="{Binding UltimateStageIcons}">
+        <ItemsControl Grid.Row="1" Grid.Column="4" ItemsSource="{x:Static constants:EvolutionIcons.UltimateStageIcons}">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" />
@@ -168,8 +249,27 @@
                     <Button Style="{StaticResource StretchContentButtonStyle}"
                             Width="{StaticResource Width}"
                             Height="{StaticResource Height}"
-                            Margin="{StaticResource Margin}">
-                        <Image Source="{Binding}" Stretch="Fill" />
+                            Margin="{StaticResource Margin}"
+                            Command="{Binding DataContext.HistoricEvolutionClickedCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
+                            CommandParameter="{Binding}">
+                        <Image Source="{Binding IconPath}" Stretch="Fill">
+                            <Image.Style>
+                                <Style TargetType="Image">
+                                    <Setter Property="Opacity" Value="0.5" />
+                                    <Style.Triggers>
+                                        <DataTrigger Value="True">
+                                            <DataTrigger.Binding>
+                                                <MultiBinding Converter="{StaticResource DigimonTypeMultiConverter}">
+                                                    <Binding Path="DataContext.HistoricEvolutions" RelativeSource="{RelativeSource AncestorType=ItemsControl}" />
+                                                    <Binding Path="." />
+                                                </MultiBinding>
+                                            </DataTrigger.Binding>
+                                            <Setter Property="Opacity" Value="1.0" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
                     </Button>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
