--- a/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/MainWindow/MainWindow.xaml
@@ -237,40 +237,69 @@
                 <!-- Start fully closed -->
                 <TranslateTransform Y="-475" />
             </Grid.RenderTransform>
-        
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-        
+
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="60"></RowDefinition>
+                <RowDefinition Height="45"></RowDefinition>
             </Grid.RowDefinitions>
-        
+
             <!-- FlaggedEvolutionPickerUserControl in Bottom Pane -->
             <Border Grid.Row="0" Grid.Column="1" Background="Transparent" Panel.ZIndex="1">
                 <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
                     <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                         <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
                             <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="10" Background="#2E3841">
-                                <flaggedEvolutionPicker:FlaggedEvolutionPickerUserControl VerticalAlignment="Center" />
+                                <flaggedEvolutionPicker:FlaggedEvolutionPickerUserControl VerticalAlignment="Center"/>
                             </Border>
                         </Border>
                     </Border>
                 </Border>
             </Border>
-        
+
             <!-- Image with Command Binding -->
-            <Image Grid.Row="1" Grid.Column="1" Style="{StaticResource BottomPaneLabelStyle}" HorizontalAlignment="Center" VerticalAlignment="Top">
-                <b:Interaction.Triggers>
-                    <b:EventTrigger EventName="MouseLeftButtonDown">
-                        <b:InvokeCommandAction Command="{Binding ToggleBottomPaneCommand}" />
-                    </b:EventTrigger>
-                </b:Interaction.Triggers>
-            </Image>
-        
+            <Grid Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Background="Transparent">
+                <Image Style="{StaticResource BottomPaneLabelStyle}" Margin="0,-2, 0, 0">
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="MouseLeftButtonDown">
+                            <b:InvokeCommandAction Command="{Binding ToggleBottomPaneCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </Image>
+
+                <!-- Overlay Text -->
+                <TextBlock Text="Historic Evolutions"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           FontWeight="Bold"
+                           TextAlignment="Center">
+
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="FontFamily" Value="{StaticResource Dw1Font}" />
+                            <Setter Property="FontWeight" Value="Bold" />
+                            <Setter Property="Foreground" Value="#D6D6D8" />
+                            <Style.Triggers>
+                                <!-- Change color based on BottomPaneIsOpen -->
+                                <DataTrigger Binding="{Binding BottomPaneIsOpen}" Value="True">
+                                    <Setter Property="Foreground" Value="Black" /> <!-- Color when open -->
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                    <b:Interaction.Triggers>
+                        <b:EventTrigger EventName="MouseLeftButtonDown">
+                            <b:InvokeCommandAction Command="{Binding ToggleBottomPaneCommand}" />
+                        </b:EventTrigger>
+                    </b:Interaction.Triggers>
+                </TextBlock>
+            </Grid>
+
             <!-- DataTrigger to Play the Animation -->
             <Grid.Style>
                 <Style TargetType="Grid">
